--- a/airflow/airflow.cfg
+++ b/airflow/airflow.cfg
@@ -49,7 +49,7 @@ max_active_runs_per_dag = 16
 # Whether to load the DAG examples that ship with Airflow. It's good to
 # get started, but you probably want to set this to ``False`` in a production
 # environment
-load_examples = True
+load_examples = False
 
 # Path to the folder containing Airflow plugins
 plugins_folder = /Users/dalmas.otieno/Documents/youtube/scrape-fuel-prices-and-weather/airflow/plugins
@@ -204,6 +204,7 @@ daemon_umask = 0o077
 # More information here:
 # http://airflow.apache.org/docs/apache-airflow/stable/howto/set-up-database.html#database-uri
 sql_alchemy_conn = sqlite:////Users/dalmas.otieno/Documents/youtube/scrape-fuel-prices-and-weather/airflow/airflow.db
+# sql_alchemy_conn = postgresql+psycopg2://<user>:<password>@<host>/<db>
 
 # Extra engine specific keyword args passed to SQLAlchemy's create_engine, as a JSON-encoded value
 # Example: sql_alchemy_engine_args = {"arg1": True}
@@ -252,7 +253,7 @@ sql_alchemy_pool_pre_ping = True
 
 # The schema to use for the metadata database.
 # SqlAlchemy supports databases with the concept of multiple schemas.
-sql_alchemy_schema =
+sql_alchemy_schema = airflow
 
 # Import path for connect args in SqlAlchemy. Defaults to an empty dict.
 # This is useful when you want to configure db engine args that SqlAlchemy won't parse
