complete airflow setup

--- a/airflow/airflow.cfg
+++ b/airflow/airflow.cfg
@@ -203,8 +203,8 @@ daemon_umask = 0o077
 # SqlAlchemy supports many different database engines.
 # More information here:
 # http://airflow.apache.org/docs/apache-airflow/stable/howto/set-up-database.html#database-uri
-sql_alchemy_conn = sqlite:////Users/dalmas.otieno/Documents/youtube/scrape-fuel-prices-and-weather/airflow/airflow.db
-# sql_alchemy_conn = postgresql+psycopg2://<user>:<password>@<host>/<db>
+#sql_alchemy_conn = sqlite:////Users/dalmas.otieno/Documents/youtube/scrape-fuel-prices-and-weather/airflow/airflow.db
+sql_alchemy_conn = postgresql+psycopg2://airflow_user2:airflow@localhost/scraped
 
 # Extra engine specific keyword args passed to SQLAlchemy's create_engine, as a JSON-encoded value
 # Example: sql_alchemy_engine_args = {"arg1": True}
