--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 alembic==1.8.1
-anyio==3.6.1
-apache-airflow==2.4.0
-apache-airflow-providers-amazon==5.1.0
+anyio==3.6.2
+apache-airflow==2.4.1
+apache-airflow-providers-amazon==6.0.0
 apache-airflow-providers-common-sql==1.2.0
 apache-airflow-providers-ftp==3.1.0
 apache-airflow-providers-http==4.0.0
@@ -20,13 +20,14 @@ backcall==0.2.0
 beautifulsoup4==4.11.1
 bleach==5.0.1
 blinker==1.5
-boto3==1.24.78
-botocore==1.27.78
+boto3==1.24.94
+botocore==1.27.94
+Brotli==1.0.9
 cachelib==0.9.0
-cattrs==22.1.0
-certifi==2022.9.14
+cattrs==22.2.0
+certifi==2022.9.24
 cffi==1.15.1
-charset-normalizer==2.0.12
+charset-normalizer==2.1.1
 click==8.1.3
 clickclick==20.10.2
 colorama==0.4.5
@@ -39,6 +40,10 @@ cron-descriptor==1.2.31
 croniter==1.3.7
 cryptography==38.0.1
 cycler==0.11.0
+dash==2.6.2
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
 debugpy==1.6.3
 decorator==5.1.1
 defusedxml==0.7.1
@@ -49,29 +54,30 @@ docutils==0.19
 email-validator==1.3.0
 entrypoints==0.4
 exceptiongroup==1.0.0rc9
-executing==1.0.0
-fastapi==0.85.0
+executing==1.1.1
+fastapi==0.85.1
 fastjsonschema==2.16.2
 Flask==2.2.2
 Flask-AppBuilder==4.1.3
 Flask-Babel==2.0.0
 Flask-Caching==2.0.1
+Flask-Compress==1.13
 Flask-JWT-Extended==4.4.4
 Flask-Login==0.6.2
 Flask-Session==0.4.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
-fonttools==4.37.3
+fonttools==4.37.4
 graphviz==0.20.1
-greenlet==1.1.3
+greenlet==1.1.3.post0
 gunicorn==20.1.0
 h11==0.12.0
 httpcore==0.15.0
 httpx==0.23.0
 idna==3.4
-importlib-metadata==4.12.0
 inflection==0.5.1
-ipykernel==6.15.3
+iniconfig==1.1.1
+ipykernel==6.16.1
 ipython==8.5.0
 ipython-genutils==0.2.0
 itsdangerous==2.1.2
@@ -81,18 +87,18 @@ jmespath==1.0.1
 json5==0.9.10
 jsonpath-ng==1.5.3
 jsonschema==4.16.0
-jupyter-core==4.11.1
-jupyter-server==1.18.1
-jupyter_client==7.3.5
-jupyterlab==3.4.7
+jupyter-server==1.21.0
+jupyter_client==7.4.3
+jupyter_core==4.11.2
+jupyterlab==3.4.8
 jupyterlab-pygments==0.2.2
-jupyterlab_server==2.15.1
+jupyterlab_server==2.16.1
 kiwisolver==1.4.4
 lazy-object-proxy==1.7.1
 linkify-it-py==2.0.0
 lockfile==0.12.2
 lxml==4.9.1
-Mako==1.2.2
+Mako==1.2.3
 Markdown==3.4.1
 markdown-it-py==2.1.0
 MarkupSafe==2.1.1
@@ -102,22 +108,22 @@ marshmallow-oneofschema==3.0.1
 marshmallow-sqlalchemy==0.26.1
 matplotlib==3.6.0
 matplotlib-inline==0.1.6
-mdit-py-plugins==0.3.0
+mdit-py-plugins==0.3.1
 mdurl==0.1.2
 mistune==2.0.4
-mypy-boto3-appflow==1.24.36.post1
+mypy-boto3-appflow==1.24.90
 mypy-boto3-rds==1.24.76
 mypy-boto3-redshift-data==1.24.36.post1
-nbclassic==0.4.3
-nbclient==0.6.8
-nbconvert==7.0.0
-nbformat==5.6.0
-nest-asyncio==1.5.5
-notebook==6.4.12
-notebook-shim==0.1.0
-numpy==1.23.3
+nbclassic==0.4.5
+nbclient==0.7.0
+nbconvert==7.2.2
+nbformat==5.7.0
+nest-asyncio==1.5.6
+notebook==6.5.1
+notebook_shim==0.2.0
+numpy==1.23.4
 packaging==21.3
-pandas==1.5.0
+pandas==1.5.1
 pandocfilters==1.5.0
 parso==0.8.3
 pathspec==0.9.0
@@ -129,57 +135,59 @@ plotly==5.10.0
 pluggy==1.0.0
 ply==3.11
 prison==0.2.1
-prometheus-client==0.14.1
+prometheus-client==0.15.0
 prompt-toolkit==3.0.31
-psutil==5.9.2
-psycopg2-binary==2.9.3
+psutil==5.9.3
+psycopg2-binary==2.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
+py==1.11.0
 pycparser==2.21
 pydantic==1.10.2
 Pygments==2.13.0
-PyJWT==2.5.0
+PyJWT==2.6.0
 pyparsing==3.0.9
 pyrsistent==0.18.1
+pytest==7.1.3
 python-daemon==2.3.1
 python-dateutil==2.8.2
 python-nvd3==0.15.0
 python-slugify==6.1.2
-pytz==2022.1
+pytz==2022.5
 pytzdata==2020.1
 PyYAML==6.0
 pyzmq==24.0.1
-redshift-connector==2.0.908
-requests==2.28.0
-requests-toolbelt==0.9.1
+redshift-connector==2.0.909
+requests==2.28.1
+requests-toolbelt==0.10.0
 rfc3986==1.5.0
-rich==12.5.1
+rich==12.6.0
 s3transfer==0.6.0
 scramp==1.4.1
-seaborn==0.12.0
+seaborn==0.12.1
 Send2Trash==1.8.0
 setproctitle==1.3.2
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.3.2.post1
-SQLAlchemy==1.4.41
+SQLAlchemy==1.4.42
 SQLAlchemy-JSONField==1.0.0
 sqlalchemy-redshift==0.8.11
 SQLAlchemy-Utils==0.38.3
-sqlparse==0.4.2
-stack-data==0.5.0
+sqlparse==0.4.3
+stack-data==0.5.1
 starlette==0.20.4
 swagger-ui-bundle==0.0.9
-tabulate==0.8.10
+tabulate==0.9.0
 tenacity==8.1.0
 termcolor==2.0.1
-terminado==0.15.0
+terminado==0.16.0
 text-unidecode==1.3
-tinycss2==1.1.1
+tinycss2==1.2.1
 tomli==2.0.1
 tornado==6.2
-traitlets==5.4.0
-typing_extensions==4.3.0
+traitlets==5.5.0
+typing_extensions==4.4.0
 uc-micro-py==1.0.1
 unicodecsv==0.14.1
 urllib3==1.26.12
@@ -190,4 +198,3 @@ websocket-client==1.4.1
 Werkzeug==2.2.2
 wrapt==1.14.1
 WTForms==2.3.3
-zipp==3.8.1
